fix: refine login form element spacing, reducing default margin-top and applying original spacing for medium screens.

--- a/styles/pages/_login.scss
+++ b/styles/pages/_login.scss
@@ -98,10 +98,16 @@
 
 .login-form__form {
     &>*+* {
-        margin-top: $spacing-8;
+        margin-top: $spacing-5;
     }
 
     width: 80%;
+
+    @include md {
+        &>*+* {
+            margin-top: $spacing-8;
+        }
+    }
 }
 
 .login-form__input {
